--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">IBDB</string>
     <string name="title_activity_greeting">GreetingActivity</string>
+    <string name="title_activity_google_maps">GoogleMaps</string>
 </resources>
