Add logs and resolve TODO string resource

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="reading_list_title">Reading List</string>
     <string name="title_activity_auth">AuthActivity</string>
     <string name="web_client_id">342548490143-f60jq36i2julq004vjt94jt4b461klgr.apps.googleusercontent.com</string>
+    <string name="sign_in_label">Sign In</string>
 </resources>
