--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="book_like">Add to Reading List</string>
     <string name="book_dislike">Remove from Reading List</string>
     <string name="reading_list_title">Reading List</string>
+    <string name="icon_logout">Logout</string>
 </resources>
