--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="prompt_skip_button">Skip</string>
     <string name="prompt_username_title_begin">Hi, your name is currently "</string>
     <string name="prompt_username_title_end">", do you want to be called something else ?</string>
+    <string name="prompt_add_friends_title">Connect with people you know on the app !</string>
 </resources>
