--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="friends_add">Add Friend</string>
     <string name="recommendation_list_title">Selected for you…</string>
     <string name="full_book_view_author_label">Author</string>
+    <string name="full_book_view_subject_label">Subject</string>
 </resources>
